# brain-backend

./: .gitignore  README.md  architecture.puml  backend_architecture.puml  braincheck_layers.puml  clean_architecture.puml  database_schema.puml  fix_database.py  fix_predictions.py  migrate.py  pyproject.toml  requirements.txt  reset_alembic.py  run_migration.py
alembic/: env.py  script.py.mako
alembic/versions/: 303987ea498b_initial_migration.py  add_timestamps_to_users.py  add_updated_at_to_predictions.py  change_prediction_result_to_text.py  change_prediction_result_type.py  update_user_id_in_predictions.py
app/: __init__.py  alembic.ini  create_tables.py  main.py  requirements.txt  utils.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  images.py  patients.py  predictions.py  users.py  whoami.py
app/core/: config.py  deps.py  email.py  security.py
app/crud/: __init__.py  base.py  crud_image.py  crud_patient.py  crud_prediction.py  crud_user.py  user.py
app/db/: base.py  base_class.py  init_db.py
app/email-templates/: new_account.html  password_set.html  reset_password.html  set_password.html  verification.html
app/models/: image.py  model.py  patient.py  prediction.py  user.py
app/schemas/: image.py  model.py  patient.py  prediction.py  token.py  user.py
app/services/: deepseek_service.py  ml_service.py  openrouter_service.py  qwen_service.py
ml/: model.py  retrain_model.py  train_model.py  train_segmentation.py  unet_brain_segmentation.pth
